==> neon-smart-studio/W-Link_NeonRTOS_Platform/src/W-Link/Driver/GPIO/Device/STM32/GPIO_STM32.c <==
#include "soc.h"
#include "GPIO/Pin/GPIO_Pin.h"
#include "GPIO/GPIO_Def.h"
#include "GPIO/GPIO.h"
#include "GPIO_STM32.h"

hwGPIO_OpResult GPIO_Pin_Init(hwGPIO_Pin pin, hwGPIO_Direction dir, hwGPIO_Pull_Mode pull_mode)
{
    if(pin>=hwGPIO_Pin_MAX)
    {
      return hwGPIO_InvalidParameter;
    }
    
    if(dir>=hwGPIO_Direction_MAX)
    {
      return hwGPIO_InvalidParameter;
    }
    
    if(pull_mode>=hwGPIO_Pull_Mode_MAX)
    {
      return hwGPIO_InvalidParameter;
    }
  
    if(gpio_pin_init_status[pin]==true)
    {
      return hwGPIO_PinConflict;
    }
    
    uint16_t soc_pin = GPIO_Map_Soc_Pin(pin);
    GPIO_TypeDef * soc_base = GPIO_Map_Soc_Base(pin);

    if(soc_pin==0 || soc_base==NULL)
    {
      return hwGPIO_InvalidParameter;
    }
    
    GPIO_Enable_RCC_Clock(soc_base);

    GPIO_InitTypeDef gpio_pin_init = {0};
    gpio_pin_init.Pin = soc_pin;

    switch(dir)
    {
        case hwGPIO_Direction_Input:
            gpio_pin_init.Mode = GPIO_MODE_INPUT;
            break;
        case hwGPIO_Direction_Output:
        case hwGPIO_Direction_Output_Only:
            switch(pull_mode)
            {
                case hwGPIO_Pull_Mode_None:
                    gpio_pin_init.Mode = GPIO_MODE_OUTPUT_PP;
                    gpio_pin_init.Pull = GPIO_NOPULL;
                    break;
                case hwGPIO_Pull_Mode_Up:
                    gpio_pin_init.Mode = GPIO_MODE_OUTPUT_PP;
                    gpio_pin_init.Pull = GPIO_PULLUP;
                    break;
                case hwGPIO_Pull_Mode_Down:
                    gpio_pin_init.Mode = GPIO_MODE_OUTPUT_PP;
                    gpio_pin_init.Pull = GPIO_PULLDOWN;
                    break;
                case hwGPIO_Pull_Mode_OpenDrain:
                    gpio_pin_init.Mode = GPIO_MODE_OUTPUT_OD;
                    break;
            }
            break;
    }
    
#ifdef GPIO_SPEED_FREQ_VERY_HIGH
    gpio_pin_init.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
#else
    gpio_pin_init.Speed = GPIO_SPEED_FREQ_HIGH;
#endif

    HAL_GPIO_Init(soc_base, &gpio_pin_init);

    gpio_current_dir[pin] = dir;
    gpio_current_mode[pin] = pull_mode;

    gpio_pin_init_status[pin] = true;
    
    return hwGPIO_OK;
}

hwGPIO_OpResult GPIO_Pin_DeInit(hwGPIO_Pin pin)
{
    if(gpio_pin_init_status[pin]==false)
    {
      return hwGPIO_OK;
    }
    
    uint16_t soc_pin = GPIO_Map_Soc_Pin(pin);
    GPIO_TypeDef * soc_base = GPIO_Map_Soc_Base(pin);

    if(soc_pin==0 || soc_base==NULL)
    {
      return hwGPIO_InvalidParameter;
    }
    
    HAL_GPIO_DeInit(soc_base, soc_pin);
    
    gpio_current_dir[pin] = hwGPIO_Direction_Input;
    gpio_current_mode[pin] = hwGPIO_Pull_Mode_None;
    
    gpio_pin_init_status[pin] = false;
    
    return hwGPIO_OK;
}

hwGPIO_OpResult GPIO_Pin_Set_Direction(hwGPIO_Pin pin, hwGPIO_Direction dir)
{
    if(pin>=hwGPIO_Pin_MAX)
    {
      return hwGPIO_InvalidParameter;
    }
    
    if(dir>=hwGPIO_Direction_MAX)
    {
      return hwGPIO_InvalidParameter;
    }
  
    if(gpio_current_dir[pin]==hwGPIO_Direction_Output_Only)
    {
      return hwGPIO_Unsupport;
    }

    uint16_t soc_pin = GPIO_Map_Soc_Pin(pin);
    GPIO_TypeDef * soc_base = GPIO_Map_Soc_Base(pin);

    if(soc_pin==0 || soc_base==NULL)
    {
      return hwGPIO_InvalidParameter;
    }
    
    GPIO_InitTypeDef gpio_pin_init = {0};
    gpio_pin_init.Pin = soc_pin;

    switch(dir)
    {
        case hwGPIO_Direction_Input:
            gpio_pin_init.Mode = GPIO_MODE_INPUT;
            break;
        case hwGPIO_Direction_Output:
        case hwGPIO_Direction_Output_Only:
            switch(gpio_current_mode[pin])
            {
                case hwGPIO_Pull_Mode_None:
                    gpio_pin_init.Mode = GPIO_MODE_OUTPUT_PP;
                    gpio_pin_init.Pull = GPIO_NOPULL;
                    break;
                case hwGPIO_Pull_Mode_Up:
                    gpio_pin_init.Mode = GPIO_MODE_OUTPUT_PP;
                    gpio_pin_init.Pull = GPIO_PULLUP;
                    break;
                case hwGPIO_Pull_Mode_Down:
                    gpio_pin_init.Mode = GPIO_MODE_OUTPUT_PP;
                    gpio_pin_init.Pull = GPIO_PULLDOWN;
                    break;
                case hwGPIO_Pull_Mode_OpenDrain:
                    gpio_pin_init.Mode = GPIO_MODE_OUTPUT_OD;
                    break;
            }
            break;
    }
    
#ifdef GPIO_SPEED_FREQ_VERY_HIGH
    gpio_pin_init.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
#else
    gpio_pin_init.Speed = GPIO_SPEED_FREQ_HIGH;
#endif

    HAL_GPIO_Init(soc_base, &gpio_pin_init);

    gpio_current_dir[pin] = dir;
    
    return hwGPIO_OK;
}

hwGPIO_OpResult GPIO_Pin_Set_PullMode(hwGPIO_Pin pin, hwGPIO_Pull_Mode pull_mode)
{
    if(pin>=hwGPIO_Pin_MAX)
    {
      return hwGPIO_InvalidParameter;
    }
    
    if(pull_mode>=hwGPIO_Pull_Mode_MAX)
    {
      return hwGPIO_InvalidParameter;
    }
  
    uint16_t soc_pin = GPIO_Map_Soc_Pin(pin);
    GPIO_TypeDef * soc_base = GPIO_Map_Soc_Base(pin);

    if(soc_pin==0 || soc_base==NULL)
    {
      return hwGPIO_InvalidParameter;
    }
    
    GPIO_InitTypeDef gpio_pin_init = {0};
    gpio_pin_init.Pin = soc_pin;

    switch(gpio_current_dir[pin])
    {
        case hwGPIO_Direction_Input:
            gpio_pin_init.Mode = GPIO_MODE_INPUT;
            break;
        case hwGPIO_Direction_Output:
        case hwGPIO_Direction_Output_Only:
            switch(pull_mode)
            {
                case hwGPIO_Pull_Mode_None:
                    gpio_pin_init.Mode = GPIO_MODE_OUTPUT_PP;
                    gpio_pin_init.Pull = GPIO_NOPULL;
                    break;
                case hwGPIO_Pull_Mode_Up:
                    gpio_pin_init.Mode = GPIO_MODE_OUTPUT_PP;
                    gpio_pin_init.Pull = GPIO_PULLUP;
                    break;
                case hwGPIO_Pull_Mode_Down:
                    gpio_pin_init.Mode = GPIO_MODE_OUTPUT_PP;
                    gpio_pin_init.Pull = GPIO_PULLDOWN;
                    break;
                case hwGPIO_Pull_Mode_OpenDrain:
                    gpio_pin_init.Mode = GPIO_MODE_OUTPUT_OD;
                    break;
            }
            break;
    }
    
#ifdef GPIO_SPEED_FREQ_VERY_HIGH
    gpio_pin_init.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
#else
    gpio_pin_init.Speed = GPIO_SPEED_FREQ_HIGH;
#endif

    HAL_GPIO_Init(soc_base, &gpio_pin_init);

    gpio_current_mode[pin] = pull_mode;
    
    return hwGPIO_OK;
}

hwGPIO_OpResult GPIO_Pin_Read(hwGPIO_Pin pin, bool* level)
{
    if(pin>=hwGPIO_Pin_MAX)
    {
      return hwGPIO_InvalidParameter;
    }
    
    if(level==NULL)
    {
      return hwGPIO_InvalidParameter;
    }
    
    if(gpio_current_dir[pin]==hwGPIO_Direction_Output_Only)
    {
      return hwGPIO_Unsupport;
    }

    uint16_t soc_pin = GPIO_Map_Soc_Pin(pin);
    GPIO_TypeDef * soc_base = GPIO_Map_Soc_Base(pin);

    if(soc_pin==0 || soc_base==NULL)
    {
      return hwGPIO_InvalidParameter;
    }
    
    *level = (HAL_GPIO_ReadPin(soc_base, soc_pin)==GPIO_PIN_SET) ? 1: 0;
    
    return hwGPIO_OK;
}

hwGPIO_OpResult GPIO_Pin_Write(hwGPIO_Pin pin, bool level)
{
    if(pin>=hwGPIO_Pin_MAX)
    {
      return hwGPIO_InvalidParameter;
    }
  
    if(gpio_current_dir[pin]==hwGPIO_Direction_Input)
    {
      return hwGPIO_Unsupport;
    }

    uint16_t soc_pin = GPIO_Map_Soc_Pin(pin);
    GPIO_TypeDef * soc_base = GPIO_Map_Soc_Base(pin);

    if(soc_pin==0 || soc_base==NULL)
    {
      return hwGPIO_InvalidParameter;
    }
    
    if(level)
    {
      HAL_GPIO_WritePin(soc_base, soc_pin, GPIO_PIN_SET);
    }
    else
    {
      HAL_GPIO_WritePin(soc_base, soc_pin, GPIO_PIN_RESET);
    }
    
    return hwGPIO_OK;
}

hwGPIO_OpResult GPIO_Pin_Toggle(hwGPIO_Pin pin)
{
    if(pin>=hwGPIO_Pin_MAX)
    {
      return hwGPIO_InvalidParameter;
    }
  
    if(gpio_current_dir[pin]==hwGPIO_Direction_Input)
    {
      return hwGPIO_Unsupport;
    }

    uint16_t soc_pin = GPIO_Map_Soc_Pin(pin);
    GPIO_TypeDef * soc_base = GPIO_Map_Soc_Base(pin);

    if(soc_pin==0 || soc_base==NULL)
    {
      return hwGPIO_InvalidParameter;
    }
    
    HAL_GPIO_TogglePin(soc_base, soc_pin);
    
    return hwGPIO_OK;
}

hwGPIO_OpResult GPIO_Interrupt_Init(hwGPIO_Int_Pin irq_pin, hwGPIO_Interrupt_Mode mode)
{
    if(irq_pin>=hwGPIO_Int_Pin_MAX)
    {
        return hwGPIO_InvalidParameter;
    }
  
    if(mode>=hwGPIO_Interrupt_Mode_MAX)
    {
        return hwGPIO_InvalidParameter;
    }
  
    if(gpio_pin_init_status[irq_pin]==true)
    {
        return hwGPIO_PinConflict;
    }
    
    uint16_t soc_pin = GPIO_Int_Map_Soc_Pin(irq_pin);
    GPIO_TypeDef * soc_base = GPIO_Int_Map_Soc_Base(irq_pin);

    if(soc_pin==0 || soc_base==NULL)
    {
      return hwGPIO_InvalidParameter;
    }
    
    uint32_t exti_port = GPIO_Int_Map_Exti_Port(irq_pin);
    uint32_t exti_line = GPIO_Int_Map_Exti_Line(irq_pin);
    GPIO_EXTI_Line exti_line_idx = GPIO_Map_EXTI_Line_Index(exti_line);

    if(exti_line_idx>=GPIO_EXTI_Line_MAX)
    {
        return hwGPIO_InvalidParameter;
    }
  
    GPIO_Enable_RCC_Clock(soc_base);

    GPIO_InitTypeDef gpio_irq_init = {0};

    switch(mode)
    {
        case hwGPIO_Interrupt_Mode_Falling_Edge:
            gpio_irq_init.Mode = GPIO_MODE_IT_FALLING;
            break;
        case hwGPIO_Interrupt_Mode_Rising_Edge:
            gpio_irq_init.Mode = GPIO_MODE_IT_RISING;
            break;
        case hwGPIO_Interrupt_Mode_Both_Edge:
            gpio_irq_init.Mode = GPIO_MODE_IT_RISING_FALLING;
            break;
        default:
            return hwGPIO_InvalidParameter;
    }
    
    gpio_irq_init.Pull = GPIO_NOPULL;
    gpio_irq_init.Pin = soc_pin;

    HAL_GPIO_Init(soc_base, &gpio_irq_init);
    
    EXTI_ConfigTypeDef cfg = {
        .Line = exti_line,
        .Mode = EXTI_MODE_INTERRUPT,
        .Trigger = EXTI_TRIGGER_NONE,
        .GPIOSel = exti_port,
    };

    switch(mode)
    {
        case hwGPIO_Interrupt_Mode_Falling_Edge:
            cfg.Trigger = EXTI_TRIGGER_FALLING;
            break;
        case hwGPIO_Interrupt_Mode_Rising_Edge:
            cfg.Trigger = EXTI_TRIGGER_RISING;
            break;
        case hwGPIO_Interrupt_Mode_Both_Edge:
            cfg.Trigger = EXTI_TRIGGER_RISING_FALLING;
            break;
        default:
            return hwGPIO_InvalidParameter;
    }
    
    gpio_exti_desc[exti_line_idx].irq_pin = irq_pin;
    gpio_exti_desc[exti_line_idx].mode = mode;

    HAL_EXTI_SetConfigLine(&gpio_exti_desc[exti_line_idx].hexti, &cfg);
    
    GPIO_EXTI_NVIC_Init(exti_line_idx);

    gpio_pin_init_status[irq_pin] = true;
    
    return hwGPIO_OK;
}

hwGPIO_OpResult GPIO_Interrupt_DeInit(hwGPIO_Int_Pin irq_pin)
{
    if(irq_pin>=hwGPIO_Int_Pin_MAX)
    {
        return hwGPIO_InvalidParameter;
    }
    
    if(gpio_pin_init_status[irq_pin]==false)
    {
        return hwGPIO_OK;
    }
    
    uint16_t soc_pin = GPIO_Int_Map_Soc_Pin(irq_pin);
    GPIO_TypeDef * soc_base = GPIO_Int_Map_Soc_Base(irq_pin);

    if(soc_pin==0 || soc_base==NULL)
    {
      return hwGPIO_InvalidParameter;
    }
    
    uint32_t exti_line = GPIO_Int_Map_Exti_Line(irq_pin);
    GPIO_EXTI_Line exti_line_idx = GPIO_Map_EXTI_Line_Index(exti_line);

    if(exti_line_idx>=GPIO_EXTI_Line_MAX)
    {
        return hwGPIO_InvalidParameter;
    }
  
    gpio_exti_desc[exti_line_idx].irq_pin = hwGPIO_Int_Pin_NC;

    GPIO_EXTI_NVIC_DeInit(exti_line_idx, &gpio_exti_desc[exti_line_idx]);

    HAL_EXTI_ClearConfigLine(&gpio_exti_desc[exti_line_idx].hexti);
    
    HAL_GPIO_DeInit(soc_base, soc_pin);
    
    gpio_pin_init_status[irq_pin] = false;

    return hwGPIO_OK;
}

hwGPIO_OpResult GPIO_Config_Interrupt_Mode(hwGPIO_Int_Pin irq_pin, hwGPIO_Interrupt_Mode mode)
{
    if(irq_pin>=hwGPIO_Int_Pin_MAX)
    {
        return hwGPIO_InvalidParameter;
    }
  
    if(mode>=hwGPIO_Interrupt_Mode_MAX)
    {
        return hwGPIO_InvalidParameter;
    }
  
    uint32_t exti_port = GPIO_Int_Map_Exti_Port(irq_pin);
    uint32_t exti_line = GPIO_Int_Map_Exti_Line(irq_pin);
    GPIO_EXTI_Line exti_line_idx = GPIO_Map_EXTI_Line_Index(exti_line);

    if(exti_line_idx>=GPIO_EXTI_Line_MAX)
    {
        return hwGPIO_InvalidParameter;
    }
  
    EXTI_ConfigTypeDef cfg = {
        .Line = exti_line,
        .Mode = EXTI_MODE_INTERRUPT,
        .Trigger = EXTI_TRIGGER_NONE,
        .GPIOSel = exti_port,
    };

    switch(mode)
    {
        case hwGPIO_Interrupt_Mode_Falling_Edge:
            cfg.Trigger = EXTI_TRIGGER_FALLING;
            break;
        case hwGPIO_Interrupt_Mode_Rising_Edge:
            cfg.Trigger = EXTI_TRIGGER_RISING;
            break;
        case hwGPIO_Interrupt_Mode_Both_Edge:
            cfg.Trigger = EXTI_TRIGGER_RISING_FALLING;
            break;
        default:
            return hwGPIO_InvalidParameter;
    }
    
    gpio_exti_desc[exti_line_idx].mode = mode;

    HAL_EXTI_SetConfigLine(&gpio_exti_desc[exti_line_idx].hexti, &cfg);
    
    return hwGPIO_OK;
}

hwGPIO_OpResult GPIO_Interrupt_Enable(hwGPIO_Int_Pin irq_pin)
{
    if(irq_pin>=hwGPIO_Int_Pin_MAX)
    {
        return hwGPIO_InvalidParameter;
    }
  
    uint32_t exti_port = GPIO_Int_Map_Exti_Port(irq_pin);
    uint32_t exti_line = GPIO_Int_Map_Exti_Line(irq_pin);
    GPIO_EXTI_Line exti_line_idx = GPIO_Map_EXTI_Line_Index(exti_line);

    if(exti_line_idx>=GPIO_EXTI_Line_MAX)
    {
        return hwGPIO_InvalidParameter;
    }
  
    EXTI_ConfigTypeDef cfg = {
        .Line = exti_line,
        .Mode = EXTI_MODE_INTERRUPT,
        .Trigger = EXTI_TRIGGER_NONE,
        .GPIOSel = exti_port,
    };

    switch(gpio_exti_desc[exti_line_idx].mode)
    {
        case hwGPIO_Interrupt_Mode_Falling_Edge:
            cfg.Trigger = EXTI_TRIGGER_FALLING;
            break;
        case hwGPIO_Interrupt_Mode_Rising_Edge:
            cfg.Trigger = EXTI_TRIGGER_RISING;
            break;
        case hwGPIO_Interrupt_Mode_Both_Edge:
            cfg.Trigger = EXTI_TRIGGER_RISING_FALLING;
            break;
        default:
            return hwGPIO_InvalidParameter;
    }
    
    HAL_EXTI_SetConfigLine(&gpio_exti_desc[exti_line_idx].hexti, &cfg);
    
    return hwGPIO_OK;
}

hwGPIO_OpResult GPIO_Interrupt_Disable(hwGPIO_Int_Pin irq_pin)
{
    if(irq_pin>=hwGPIO_Int_Pin_MAX)
    {
        return hwGPIO_InvalidParameter;
    }
  
    uint32_t exti_port = GPIO_Int_Map_Exti_Port(irq_pin);
    uint32_t exti_line = GPIO_Int_Map_Exti_Line(irq_pin);
    GPIO_EXTI_Line exti_line_idx = GPIO_Map_EXTI_Line_Index(exti_line);

    if(exti_line_idx>=GPIO_EXTI_Line_MAX)
    {
        return hwGPIO_InvalidParameter;
    }
  
    EXTI_ConfigTypeDef cfg = {
        .Line = exti_line,
        .Mode = EXTI_MODE_INTERRUPT,
        .Trigger = EXTI_TRIGGER_NONE,
        .GPIOSel = exti_port,
    };

    HAL_EXTI_SetConfigLine(&gpio_exti_desc[exti_line_idx].hexti, &cfg);
    
    return hwGPIO_OK;
}

hwGPIO_OpResult GPIO_Interrupt_Pin_Read(hwGPIO_Int_Pin pin, bool* level)
{
    if(pin>=hwGPIO_Int_Pin_MAX)
    {
      return hwGPIO_InvalidParameter;
    }
    
    if(level==NULL)
    {
      return hwGPIO_InvalidParameter;
    }
  
    uint16_t soc_pin = GPIO_Map_Soc_Pin(pin);
    GPIO_TypeDef * soc_base = GPIO_Map_Soc_Base(pin);

    if(soc_pin==0 || soc_base==NULL)
    {
      return hwGPIO_InvalidParameter;
    }
    
    *level = (HAL_GPIO_ReadPin(soc_base, soc_pin)==GPIO_PIN_SET) ? 1: 0;
    
    return hwGPIO_OK;
}
